# dynamo

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Earthfile  README.md  SECURITY.md  codespell.txt  deny.toml  dynamo.code-workspace  dynamo_deploy.md  pyproject.toml  quick-start.ipynb  support_matrix.md  triton.code-workspace
applications/llm/count/: Cargo.toml  README.md
applications/llm/count/src/: lib.rs  main.rs
applications/llm/count/visualization/: README.md  docker-compose.yml  grafana.json  prometheus.yml
components/metrics/: Cargo.toml  README.md
components/metrics/src/: lib.rs  main.rs
deploy/compoundai/sdk/: pyproject.toml
deploy/dynamo/api-store/: .earthlyignore  Earthfile  README.md  docker-compose.yaml  pyproject.toml
deploy/dynamo/api-store/ai_dynamo_store/: .env  __init__.py  app.py  main.py
deploy/dynamo/sdk/: README.md  pyproject.toml
examples/rust/: Cargo.toml
examples/rust/hello_world/: Cargo.toml
examples/rust/hello_world/src/: lib.rs
examples/rust/http/: Cargo.toml
examples/rust/http/src/: main.rs
examples/rust/llmctl/: Cargo.toml
examples/rust/llmctl/src/: main.rs
examples/rust/service_metrics/: Cargo.toml  README.md
examples/rust/service_metrics/src/: lib.rs
icp/python/: pyproject.toml
launch/dynamo-run/: Cargo.toml  README.md  build.rs
launch/dynamo-run/src/: flags.rs  hub.rs  input.rs  lib.rs  main.rs  net.rs  opt.rs
launch/dynamo-run/src/input/: batch.rs  common.rs  endpoint.rs  http.rs  text.rs
launch/dynamo-run/src/output/: common.rs  echo_core.rs  echo_full.rs
launch/tio/: Cargo.toml  README.md
launch/tio/src/: lib.rs  main.rs  net.rs  opt.rs  output.rs
launch/tio/src/input/: endpoint.rs  http.rs  text.rs
launch/tio/src/output/: echo_core.rs  echo_full.rs
lib/bindings/c/: Cargo.toml  build.rs  cbindgen.toml
lib/bindings/c/src/: lib.rs
lib/bindings/cpp/nvllm-trt/: CMakeLists.txt
lib/bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
lib/bindings/python/rust/: engine.rs  http.rs  lib.rs  llm.rs
lib/bindings/python/tests/: soak.py  test_bindings_install.py  test_etcd_bindings.py  test_kv_bindings.py
lib/engines/llamacpp/: Cargo.toml  README.md
lib/engines/llamacpp/src/: lib.rs
lib/engines/mistralrs/: Cargo.toml
lib/engines/mistralrs/src/: lib.rs
lib/engines/trtllm/: Cargo.toml  build.rs
lib/engines/trtllm/src/: executor.rs  lib.rs
lib/engines/vllm/: Cargo.toml
lib/engines/vllm/src/: engine.rs  lib.rs  ray.rs  subprocess.rs  worker.rs
lib/llm/: Cargo.toml  build.rs
lib/llm/src/: backend.rs  disagg_router.rs  engines.rs  gguf.rs  http.rs  kv.rs  kv_router.rs  lib.rs  model_card.rs  model_type.rs  preprocessor.rs  protocols.rs  recorder.rs  tokenizers.rs  tokens.rs  types.rs
lib/llm/src/common/: versioned.rs
lib/llm/src/engines/: llamacpp.rs  mistralrs.rs  python.rs  sglang.rs  trtllm.rs  vllm.rs
lib/llm/src/gguf/: content.rs  gguf_metadata.rs  gguf_tokenizer.rs
lib/llm/src/http/: service.rs
lib/llm/src/kernels/: block_copy.cu
lib/llm/src/kv/: layer.rs  manager.rs  reserved.rs  reuse.rs  storage.rs
lib/llm/src/kv_router/: indexer.rs  metrics_aggregator.rs  protocols.rs  publisher.rs  recorder.rs  scheduler.rs  scoring.rs  worker.rs
lib/llm/src/model_card/: create.rs  model.rs
lib/llm/src/protocols/: codec.rs  common.rs  openai.rs
lib/llm/src/tokenizers/: README.md
lib/llm/tests/: aggregators.rs  backend.rs  http-service.rs  kv_manager.rs  model_card.rs  openai_completions.rs  preprocessor.rs  tokenizers.rs
lib/llm/tests/snapshots/: openai_completions__minimum_viable_request.snap  openai_completions__valid_samples-10.snap  openai_completions__valid_samples-2.snap  openai_completions__valid_samples-3.snap  openai_completions__valid_samples-4.snap  openai_completions__valid_samples-5.snap  openai_completions__valid_samples-6.snap  openai_completions__valid_samples-7.snap  openai_completions__valid_samples-8.snap  openai_completions__valid_samples-9.snap  openai_completions__valid_samples.snap  preprocessor__mulit_turn_with_system@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__mulit_turn_with_system_with_tools@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__mulit_turn_without_system@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__multi_turn_with_continuation@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__multi_turn_with_system_with_tools@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__single_turn@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap  preprocessor__single_turn_with_tools@meta_llama_llama_3_1_70b_instruct__1605565_e45e5991.snap
lib/runtime/: Cargo.toml  README.md
lib/runtime/examples/: Cargo.toml
lib/runtime/examples/hello_world/: Cargo.toml
lib/runtime/examples/service_metrics/: Cargo.toml  README.md
lib/runtime/src/: component.rs  config.rs  discovery.rs  distributed.rs  engine.rs  lib.rs  logging.rs  pipeline.rs  prelude.rs  protocols.rs  runtime.rs  service.rs  slug.rs  traits.rs  utils.rs  worker.rs
lib/runtime/src/component/: client.rs  component.rs  endpoint.rs  namespace.rs  registry.rs  service.rs
lib/runtime/src/pipeline/: context.rs  error.rs  registry.rs
lib/runtime/src/traits/: events.rs
lib/runtime/src/transports/: etcd.rs  nats.rs  tcp.rs  zmq.rs
lib/runtime/src/utils/: pool.rs  stream.rs
lib/runtime/tests/: lifecycle.rs  pipeline.rs  pool.rs  soak.rs
lib/runtime/tests/common/: engines.rs  mock.rs  (+1 more)
llm/rust/triton-llm/: Cargo.toml
runtime/python/: pyproject.toml
runtime/rust/: Cargo.toml  README.md  deny.toml
runtime/rust/python-wheel/: Cargo.toml  README.md  pyproject.toml
runtime/rust/src/: component.rs  config.rs  discovery.rs  distributed.rs  engine.rs  lib.rs  logging.rs  pipeline.rs  protocols.rs  runnable.rs  runtime.rs  service.rs  slug.rs  traits.rs  transports.rs  utils.rs  worker.rs
runtime/rust/tests/: lifecycle.rs  pipeline.rs  soak.rs
(+1220 files in other folders)
