[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "triton_distributed.icp"
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/triton_distributed/icp/_version.py"
root = "../.."

[tool.setuptools.packages.find]
where = ["src"]
include = ["triton_distributed.icp*"]
namespaces= true
