# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-distributed-icp"
dynamic = ["version"]
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-triton@nvidia.com" },
]
license = { text = "Apache-2.0" }

# Minimum dependencies to import triton_distributed.icp
# TODO: Expand this list to include all dependencies and remove duplicates from container/deps.
dependencies = [
    "cupy-cuda12x",
    "nats-py",
    "msgspec",
    "ucx-py-cu12",
    "protobuf==5.27.3",
    "grpcio-tools==1.66.0",
]

[tool.setuptools_scm]
version_file = "src/triton_distributed/icp/_version.py"
root = "../.."

[tool.setuptools.packages.find]
where = ["src"]
include = ["triton_distributed.icp*"]
namespaces = true

[tool.setuptools]
license-files = ["../../LICENSE"]